--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,9 +70,14 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.37"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    //
+    //paging3
     implementation "androidx.paging:paging-runtime-ktx:3.0.1"
-
+    //Floating Search View
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    //searchView
+    implementation 'io.github.lapism:search:1.0.0'
+    //leakCanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
 
 }
