--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Glide (Image Loader)
@@ -71,9 +71,11 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     //paging3
     implementation "androidx.paging:paging-runtime-ktx:3.0.1"
+    //wnafee play pause button
     implementation 'com.wnafee:vector-compat:1.0.5'
-
+    //lottie animations
     implementation 'com.airbnb.android:lottie:4.1.0'
+
 
 
 }
